admin Login navigation reset

--- a/log.html
+++ b/log.html
@@ -242,7 +242,7 @@ td{
             </form>			
             <div class="text-center small">Don't have an account? <a href="log.html">Sign up</a>
                   </div>
-                  <a href="Admin\scheme.html"><button  class="btn btn-primary btn-block btn-lg">Click here for Admin DEMO</button></a>
+                  <a href="admin/scheme.html"><button  class="btn btn-primary btn-block btn-lg">Click here for Admin DEMO</button></a>
                 </div>
       </div>
     </div>
